Move OnPrefRegistered from PrefRegistrySimple to PrefRegistry.

PrefRegistrySyncable uses the PrefRegistrySimple::OnPrefRegistered()
hook to register syncable prefs with the PrefServiceSyncable.
However, foreign-owned prefs are registered directly with the base class
PrefRegistry, skipping this hook, resulting in synced prefs owned by a
service other than chrome (in this case ash) not being registered with
the PrefServiceSyncable and thus are not synced.

Move OnPrefRegistered to PrefRegistry and ensure it is called for all
pref registrations with PrefRegistry so synced pref registrations from
all services are correctly registered with the PrefServiceSyncable.

Bug: 774221
Change-Id: Ic2ffcac651d94b592b263df7f523acf3f9e05f8d
Reviewed-on: https://chromium-review.googlesource.com/717576
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508670}
Former-commit-id: 450271fac784bf2ef465450164e271ea0f68cff9